Added / Updated by Claude Code and Github Copilot in Intellij